--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -53,7 +53,7 @@
     <thead>
         <tr>
             <th>Customer</th>
-            <th>Discount Rate</th>
+            <th>Membership Type</th>
         </tr>
     </thead>
     <tbody>
@@ -61,7 +61,7 @@
         {
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-                <td>@customer.MembershipType.DiscountRate %</td>
+                <td>@customer.MembershipType.Name</td>
             </tr>
 
          }
