--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -17,21 +17,21 @@
 @if (!Model.Any())
 {
 <p>We don't have any customers yet.</p> }
-            else
+else
+{
+    <table class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>Customer</th>
+                <th>Membership Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var customer in Model)
             {
-<table class="table table-bordered table-hover">
-    <thead>
-        <tr>
-            <th>Customer</th>
-            <th>Discount Rate</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var customer in Model)
-        {
-<tr>
-    <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-    <td>@customer.MembershipType.DiscountRate%</td>
-</tr>}
-    </tbody>
-</table>}
+                <tr>
+                    <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
+                    <td>@customer.MembershipType.Name</td>
+                </tr>}
+        </tbody>
+    </table>}
